--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -1,4 +1,4 @@
-name: "Continuous Integration"
+name: Continuous Integration
 
 on:
   pull_request:
@@ -6,12 +6,14 @@ on:
 
 jobs:
   check_pull_requests:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-node@v1
-      with:
-        node-version: 14
-    - name: Install dependencies and run tests
-      run: |
-        cd client
-        yarn install
-        yarn run build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 14
+      - name: Install dependencies and run tests
+        run: |
+          cd client
+          yarn install
+          yarn run build
